# texcreate_old

./: .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  Makefile  PLAN.md  README.md  RELEASES.md  adding_new_templates.html  beamer_template_example.html  book.toml  build.html  code_template_example.html  config.toml  config_plan.toml  create.html  edit.html  index.html  init.html  intro.html  list.html  list.json  print.html  searchindex.js  searchindex.json  texcreate.html  web.html
.chglog/: config.yml
.github/workflows/: main.yml
Basic/: Basic.tex
Code/: Code.tex  structure.tex
Project Name/: structure.tex
Project Name_texcreate/: Project Name.tex
Project1/: Project1.tex  structure.tex
Project2/: Project2.tex  structure.tex
Templates/Basic/: main.fdb_latexmk  main.fls  main.tex  structure.tex
Templates/Beamer/: main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc  structure.tex
Templates/Code/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc  structure.tex
Templates/Math/: .aux  main.fdb_latexmk  main.fls  main.tex  structure.tex
Templates/Novel/: main.aux  main.tex  main.toc  structure.tex
Templates/Theatre/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc  structure.tex
doc/: SUMMARY.md  adding_new_templates.md  build.md  code_template_example.md  create.md  edit.md  intro.md
doc/pics/: test.go
matex/: Cargo.toml
project/: README.md  texcreate.toml
project/src/: project.tex  structure.tex
src/: list.rs  main.rs
src/create/: basic.rs  config.rs  math.rs  mkproj_book.rs  mod.rs  routes.rs  template.rs  theatre.rs
tex-rs/: Cargo.toml
tex-rs/src/: element.rs  error.rs  latex.rs  lib.rs
tex-rs/src/traits/: attatch.rs  convert.rs  mod.rs
texc-config/: Cargo.toml
texc-config/src/: custom_templates.rs  error.rs  extra.rs  lib.rs
texc-core/: Cargo.toml
texc-error/: Cargo.toml
texc-error/src/: lib.rs
texc-latex/: Cargo.toml
texc-latex/src/: lib.rs
texc-latex/src/templates/: basic.rs  beamer.rs  book.rs  code.rs  dictionary.rs  lachaise.rs  lachaise_modified.rs  mod.rs  news.rs  novel.rs  theatre.rs
texc-utils/: Cargo.toml
texc-utils/src/: lib.rs
texc-web/: Cargo.toml
texc-web/src/: index.rs  lib.rs  web.rs
texcreate_lib/: Cargo.toml
texcreate_lib/src/: lib.rs  routes.rs
texcreate_lib/src/Config/: config.rs  config_multi.rs  consts.rs  error.rs  mod.rs  template.rs
texcreate_lib/src/Templates/: basic.rs  beamer.rs  book.rs  code.rs  lachaise.rs  math.rs  mod.rs  novel.rs  theatre.rs
texcreate_lib/src/Web/: mod.rs  tc.rs  web.rs
texcreate_test2/: texcreate_test2.tex
tmp/: config.toml  test.rs
tmp/Project1/: Project1.tex
tmp/Project2/: Project2.tex  structure.tex
