[package]
name = "texcreate"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "A tool to create TeX projects from prebuilt LaTeX templates."
author = "Mustafif Khan"
repository = "https://github.com/MKProj/texcreate.git"
homepage = "https://mkproj.com"
github = "https://github.com/MKProj/"
documentation = "https://docs.rs/texcreate_lib/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
mdbook = "0.4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
texcreate_lib = {path = "texcreate_lib", version= "0.1"}
open = "2"
clap = "3.0.7"
clap_complete = "3.0.4"

[features]
