[package]
name = "texcreate"
version = "2.0.3"
edition = "2021"
description = "Create LaTeX Projects using prebuilt templates"
license = "MIT"
repository = "http://github.com/MKProj/texcreate.git"
documentation = "http://docs.rs/texcreate/"
[workspace]
members = [
    "tex-rs", 
    "texc-config",
    "texc-utils", 
    "texc-web",
    "texc-latex"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
mdbook = "0.4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
texcreate_lib = "0.1"
open = "2"
texc-config = {version = "^0.1",path = "texc-config"}
texc-utils = {version = "0.1.1",path = "texc-utils"}
async-std = "1.10.0"
texc-web = {version = "^0.1", path = "texc-web"}