[package]
name = "tex-rs"
version = "0.2.8"
edition = "2021"
license = "MIT"
description = "Library to create latex documents in Rust"
authors = ["Mustafif Khan"]
repository = "http://github.com/MKProj/texcreate.git"
documentation = "http://docs.rs/tex-rs/"
homepage = "http://texcreate.mkproj.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-std = "1.10.0"
rayon = "1.5.1"