[package]
name = "texc-config"
version = "0.1.6"
edition = "2021"
description = "Config and Error library for TexCreate"
license = "MIT"
repository = "http://github.com/MKProj/texcreate.git"
documentation = "http://docs.rs/texc-config/"
homepage = "http://texcreate.mkproj.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0"
serde = {version = "1", features = ["derive"]}
texcreate_lib = "0.1.17"
toml = "0.5.8"
texc-latex = {version = "^0.1",path = "../texc-latex"}
tex-rs = {version = "0.2",path = "../tex-rs"}
failure = "0.1.8"
failure_derive = "0.1.8"
zip = "0.5.13"
rocket = "0.5.0-rc.1"
thiserror = "1.0.30"
anyhow = "1.0.56"
lazy_static = "1.4.0"
regex = "1.5.5"