[package]
name = "texc-latex"
version = "0.1.2"
edition = "2021"
description = "Contains LaTeX templates for TeXCreate"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tex-rs = {version = "0.2", path = "../tex-rs"}
mdbook = "0.4.15"
reqwest = "0.11.10"