[package]
name = "texc-latex"
version = "0.1.6"
edition = "2021"
description = "Contains LaTeX templates for TeXCreate"
license = "MIT"
repository = "http://github.com/MKProj/texcreate.git"
documentation = "http://docs.rs/texc-latex/"
homepage = "http://texcreate.mkproj.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tex-rs = {version = "0.2", path = "../tex-rs"}
mdbook = "0.4.15"
reqwest = "0.11.10"