[package]
name = "texc-utils"
version = "0.1.6"
edition = "2021"
description = "Utility library for TexCreate"
license = "MIT"
repository = "http://github.com/MKProj/texcreate.git"
documentation = "http://docs.rs/texc-utils/"
homepage = "http://texcreate.mkproj.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0"
texc-config = {version = "^0.1", path = "../texc-config"}
tex-rs = {version = "^0.2", path = "../tex-rs"}