[package]
name = "texc-web"
version = "0.1.0"
edition = "2021"
description = "Library for local texcreate web version"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
texc-config = {version = "^0.1", path = "../texc-config"}
tempdir = "0.3.7"