[package]
name = "texc-web"
version = "0.1.7"
edition = "2021"
description = "Library for local texcreate web version"
license = "MIT"
repository = "http://github.com/MKProj/texcreate.git"
documentation = "http://docs.rs/texc-web/"
homepage = "http://texcreate.mkproj.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
texc-config = {version = "^0.1", path = "../texc-config"}
tempdir = "0.3.7"
zip = "0.6.1"
async-std = "1.11.0"
toml = "0.5.9"