[package]
name = "texcreate_lib"
version = "0.1.8"
edition = "2021"
description = "The core library for texcreate"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
mdbook = "0.4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4.0"
indicatif = "0.17.0-beta.1"